2002-08-09  David N. Welton  <davidw@dedasys.com>

	* ncgi.tcl (ncgi::multipart): Fix [ 564279 ] ncgi::multipart bug -
	commented out offending 'puts' statements.

2002-04-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ncgi.man: Added doctools manpage.

2002-01-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Bumped version to 1.2.1

2001-10-20  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ncgi.tcl (ncgi::redirect): Fixed bug #464560 reported by Ed
	  Rolfe <erolfe@users.sourceforge.net>. The proposed fix is not
	  used as it does not pass the testsuite. We check for the
	  existence of "env(REQUEST_URI)" instead, again, and use the
	  appropriate alternate information if it does not exist.

2001-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ncgi.n:
	* ncgi.test:
	* ncgi.tcl:
	* pkgIndex.tcl: Version up to 1.2

2001-09-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ncgi.tcl: Restricted export list to public API.
	  [456255]. Patch by Hemang Lavana
	  <hemanglavana@users.sourceforge.net>

2001-09-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ncgi.tcl: Added missing [global env]. Bug [458023].

2001-08-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* ncgi.tcl: made require Tcl 8.1+, sped up encode and decode.

2001-07-10  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* ncgi.tcl: Frink 2.2 run, fixed dubious code.

2001-06-21  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* ncgi.tcl: Fixed dubious code reported by frink.

2001-06-15  Melissa Chawla <melissachawla@yahoo.com>

	* ncgi.tcl: Applied George Wu's patch (gwu@acm.org) to the
 	multipart function.  It failed to process binary data correctly
 	because it replaced all "\r\n" sequences with "\n".

2000-07-31  Brent Welch <welch@scriptics.com>

	* ncgi.tcl:  Added ncgi::setValue, ncgi::setValueList,
	ncgi::setDefaultValue, ncgi::setDefaultValueList to push values