@@ -1,5 +1,7 @@
 2002-08-09  David N. Welton  <davidw@dedasys.com>
 
+	* ncgi.test: Added two new tests for setValue.
+
 	* ncgi.tcl (ncgi::multipart): Fix [ 564279 ] ncgi::multipart bug -
 	commented out offending 'puts' statements.
 
